--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 /Suspicious Company/UserSettings/
 /Suspicious Company/Obj/
 /Suspicious Company/Logs/
+Suspicious Company/[Ll]ogs/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
